# senac-so

./: README.md
mbr/: CMakeLists.txt  main.c
memory/: CMakeLists.txt  lista.c  lista.h  main.c  memoria.c  memoria.h
monte_carlo_pi/: CMakeLists.txt  main.c
steganography/: CMakeLists.txt  main.c
syscalls/: CMakeLists.txt  main.c  other.c
